feat: add ability to define class in BootClassLoader